--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "frontend/src/app/[locale]/layout.tsx",
-        "use": "@vercel/node"
+        "src": "/frontend",
+        "use": "@vercel/next"
       }
     ]
   }
