--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "frontend",
-        "use": "@vercel/next"
-      }
-    ],
-    "routes": [
-      { "src": "/frontend/src/app/([a-z]+)/(.*)", "dest": "/frontend/src/app/$1/$2" },
-      { "src": "/(.*)", "dest": "/frontend/$1" }
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
     ]
-  }
-
-  
+}
