--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "source": "frontend/(.*)",
+            "destination": "/frontend"
         }
     ]
 }
