--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/[locale]/layout.tsx"
+    "src/app/layout.tsx"
   ],
   "exclude": ["node_modules"]
 }
