--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,20 +1,9 @@
 {
-    "builds": [
-      {
-        "src": "/frontend",
-        "use": "@vercel/next"
-      },
-      {
-        "src": "/frontend/src/app/[locale]/**/*",
-        "use": "@vercel/next"
-      },
-      {
-        "src": "/frontend/public/**/*",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/frontend/$1" }
-    ]
-  }
-  
+  "builds": [
+    {
+      "src": "/frontend",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/frontend" }]
+}
