--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,15 @@
 {
-  "builds": [
-    {
-      "src": "/frontend",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [{ "src": "/(.*)", "dest": "/frontend" }]
-}
+    "version": 2,
+    "builds": [
+      { "src": "frontend", "use": "@vercel/next" },
+      { "src": "public/**/*", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "/frontend/src/app/$1" }
+    ],
+    "rewrites": [
+      { "source": "/:locale*/(.*)", "destination": "/frontend/src/app/$1" }
+    ]
+  }
+  
